style.css
@import url("https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500&display=swap");

/* Global Properties */
body {
  font-family: "Google Sans", sans-serif !important;
  font-size: 16px;
  margin: 0;
  padding: 0;
  position: relative;
}

main {
  width: 50vw;
  margin: 0 auto;
}

@media (max-width: 768px) {
  main {
    width: 100vw;
    margin: 0 auto;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  main {
    width: 70vw;
    margin: 0 auto;
  }
}

h4 {
  margin: 0 0;
  font-weight: 400;
}

/* Grid Setup */
.grid-container {
  display: grid;
  justify-content: center;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "menu menu"
    "photo photo";
  gap: 10px;
  padding: 0.5em;
}

@media (min-width: 1023px) {
  .grid-container {
    display: grid;
    grid-template-columns: max-content max-content;
    grid-template-areas: "menu photo";
    justify-items: center;
    justify-content: center;
  }
}

.grid-item {
  border-radius: 0.5em;
  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 0px 8px;
}

.grid-item.menu {
  grid-area: menu;
}

.grid-item.photo {
  grid-area: photo;
}

/* Inside Grid --> */

/* FirstPart - Menu */

.photo-menu-wrapper {
  overflow: scroll;
  border-radius: 0.5em;
  height: 850px;
  max-width: 20em;
}

@media (max-width: 1023px) {
  .photo-menu-wrapper {
    max-width: 100%;
    height: 48vh;
  }
}

.photo-menu-item {
  background-color: white;
  color: black;
  padding: 0.4em;
  margin: 0.5em 0.7em;
  border-radius: 0.3em;
  display: flex;
  flex-direction: row;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
  transition: 0.3s;
}

@media (max-width: 1023px) {
  .photo-menu-item {
    max-width: 100vw;
  }
}

.photo-menu-item img {
  height: 2.5em;
  width: 2.5em;
  object-fit: cover;
  min-width: 2.5em;
  border-radius: 0.5em;
  margin-right: 0.5em;
}

.add-word-break {
  min-width: 0;
  word-wrap: break-word;
}

/* second part - Preview */
.photo-preview {
  overflow: hidden;
  border-radius: 0.5em;
  width: 500px;
  height: 800px;
}

.photo-preview img {
  width: inherit;
  height: inherit;
  object-fit: cover;
}

.photo-caption {
  width: 500px;
  color: grey;
  text-align: center;
  margin: 0.5em 0;
}

@media (max-width: 1023px) {
  .photo-preview {
    height: 70vh;
    width: 100%;
  }
  .photo-caption {
    width: 100%;
    color: grey;
    text-align: center;
    margin: 0.5em 0;
  }
}

.add-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

